# information_retrieval

./: README.md  docker-compose.yml  requirements.txt
src/lab1/: README.md  analyze_wiki_dump.py
src/lab2/: README.md  check_db.py  crawler.py
src/lab3-5/: CMakeLists.txt  README.md  tokenizer_mongo
src/lab3-5/include/: indexer.h  search.h  tokenizer.h  types.h
src/lab3-5/plots/: zypf_law.py
src/lab3-5/src/: cli.cpp  indexer.cpp  main.cpp  search.cpp
src/lab3-5/src/web/: app.py
src/lab3-5/src/web/static/: style.css
src/lab3-5/src/web/templates/: index.html
